flux/verify-git-repositories/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-git-repositories
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
