flux/verify-git-repositories/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: verify-git-repositories
spec:
  steps:
  - name: 01 - Create policy and verify
    try:
    - apply:
        file: ../verify-git-repositories.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: verify-git-repositories
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: 02 - Create good GitRepository
    try:
    - apply:
        file: good.yaml
  - name: 03 - Create bad GitRepository
    try:
    - apply:
        file: bad.yaml
        expect:
        - check:
            ($error != null): true
