flux/verify-git-repositories/.chainsaw-test/chainsaw-test.yml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: verify-git-repositories
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ./../verify-git-repositories.yaml
    - assert:
        file: policy-assert.yaml


apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: verify-flux-sources
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../verify-flux-sources.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
    - assert:
        file: chainsaw-step-01-assert-2.yaml
    - assert:
        file: chainsaw-step-01-assert-3.yaml
    - assert:
        file: chainsaw-step-01-assert-4.yaml
    - assert:
        file: chainsaw-step-01-assert-5.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: repo-bad-git.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: repo-bad-bucket.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: repo-bad-helm.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: repo-bad-image.yaml
    - apply:
        file: repo-good-git.yaml
    - apply:
        file: repo-good-bucket.yaml
    - apply:
        file: repo-good-helm.yaml
    - apply:
        file: repo-good-image.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: verify-flux-sources
